--- a/canadditionalmetals/canadditionalmetals/assets/canadditionalmetals/lang/en.json
+++ b/canadditionalmetals/canadditionalmetals/assets/canadditionalmetals/lang/en.json
@@ -16,7 +16,7 @@
     "game:item-metalbit-redsteel": "Red steel bits",
     "game:item-metalbit-blacksteel": "Black steel bits",
     "game:item-metalbit-bluesteel": "Blue steel bits",
-    "game:item-metalbit-sterlingsilver": "Steerling silver bits",
+    "game:item-metalbit-sterlingsilver": "Sterling silver bits",
     "game:item-metalbit-rosegold": "Rose gold bits",
     "game:block-anvil-blacksteel": "Black steel anvil",
     "game:block-anvil-redsteel": "Red steel anvil",
